# titanic_v2

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: dtree-kaggle_submission.csv  dtree-model.joblib  dtree-y_predicted.parquet  kaggle_submission.csv  knn-kaggle_submission.csv  knn-model.joblib  knn-y_predicted.parquet  lasso-kaggle_submission.csv  lda-kaggle_submission.csv  lda-model.joblib  lda-partial-kaggle_submission.csv  lda-partial-model.joblib  lda-partial-transformer.joblib  lda-partial-y_predicted.parquet  lda-transformer.joblib  lda-y_predicted.parquet  log_reg-kaggle_submission.csv  log_reg-lasso-model.joblib  log_reg-lasso-y_predicted.parquet  log_reg-model.joblib  log_reg-ridge-model.joblib  log_reg-ridge-y_predicted.parquet  log_reg-y_predicted.parquet  ridge-kaggle_submission.csv
notebooks/: 01-mas-eda-wrangling.ipynb  02-mas-eda-analytics.ipynb  02.3-mas-feature-selection.ipynb  03-mas-feature-eng.ipynb  03.3-mas-dtree-model-training.ipynb  04-mas-train-test-split.ipynb  04.1-mas-logreg-model-testing.ipynb  05-mas-logreg-model-training.ipynb  05-mas-model-training.ipynb  06-mas-knn-model-training.ipynb  07-mas-dtree-model-training.ipynb  08-mas-model-testing.ipynb  08-mas-model-validation.ipynb
notebooks/01_eda/: 01.1-mas-eda-wrangling.ipynb  01.2-mas-eda-analytics.ipynb
notebooks/02_feature_eng/: 02.1-mas-feature-transform.ipynb  02.2-mas-train-test-split.ipynb  02.3-mas-feature-selection.ipynb
notebooks/03_train/: 03.2-mas-knn-model-training.ipynb  (+6 more)
titanic/: config.py  dataset.py  features.py  plots.py
(+11 files in other folders)
