[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic"
version = "0.0.1"
description = "Kaggle competition for learning how to work with ML models using the titanic data set"
authors = [
  { name = "Mario Ervedosa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^3.9.2"
isort = "^5.9.3"
loguru = "^0.5.3"
mkdocs = "^1.2.3"
pip = "^21.2.4"
python-dotenv = "^0.19.1"
tqdm = "^4.62.3"
typer = "^0.4.0"
pandas = "^2.2.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.0"
numpy = "^1.22.0"
scipy = "^1.8.0"
statsmodels = "^0.14.4"
pandera = "^0.22.1"
jupyter = "^1.1.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["titanic"]
force_sort_within_sections = true
